Few bugs to solve

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
-project(ex2)
+project(project)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp Thread.cpp Thread.h uthreads.cpp ThreadManager.cpp ThreadManager.h Scheduler.cpp Scheduler.h)
-add_executable(ex2 ${SOURCE_FILES})
+set(SOURCE_FILES test.cpp Thread.cpp Thread.h uthreads.cpp ThreadManager.cpp ThreadManager.h)
+add_executable(project ${SOURCE_FILES})
