--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
 project(project)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lboost_system")
 add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
-set(SOURCE_FILES ex2/test.cpp ex2/Thread.cpp ex2/Thread.h ex2/uthreads.cpp Search.cpp)
+set(SOURCE_FILES  Search.cpp)
 add_executable(project ${SOURCE_FILES})
