--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(untitled1)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES CacheFS.cpp Test1.cpp FileDesc.cpp FileDesc.h CacheBlock.cpp CacheBlock.h Cache.h LRUCache.cpp LRUCache.h LFUCache.cpp LFUCache.h FBRCache.cpp FBRCache.h Cache.cpp)
+set(SOURCE_FILES CacheFS.cpp FileDesc.cpp FileDesc.h TEST.cpp CacheBlock.cpp CacheBlock.h Cache.h LRUCache.cpp LRUCache.h LFUCache.cpp LFUCache.h FBRCache.cpp FBRCache.h Cache.cpp)
 add_executable(project ${SOURCE_FILES})
